src/test/deca/syntax/valid/synt/class3.deca
// Description:
//    Programme pour definir plusieurs class avec extends
//
// Resultats:
//    ok
//
// Historique:
//    cree le 01/01/2022
class A{}
class B{}
class C extends A{}
